# working-CIF-service

./: README.md  Ui_untitled.py  pyproject.toml  untitled.ui
.github/workflows/: build-windows-exe.yml  build-windows-executable-main.yml
email_api/: agent_email_sql.py
email_api/inquiry/: smtp.py
init_conf/: azure.json
work/: azure.py  inquiry.py  jcf_tcf.py
